Updaten met nog meer info en laatste commit voor release(tenzij er fouten worden gevonden)

--- a/index.html
+++ b/index.html
@@ -27,19 +27,47 @@
     <h2 id="game">Game</h2>
     <p>Ricky's Adventure for the Ages(Naam nog niet definitief). Dit is een point en click avontuur.
         Je klikt op dingen in de achtergrond. Door dit te doen leer je meer over het tijdperk waar je dan bent.
-        Verzamel objecten en geef ze aan de juiste karakters om naar het volgende gebied te gaan en om de karakters
-        te helpen met hun problemen.
+        Verzamel verschillende objecten en geef ze aan de juiste karakters om naar het volgende gebied te gaan en om de karakters
+        te helpen met hun problemen. Op deze manier leer je belangrijke gebeurtenissen uit de geschiedenis en zie je waar de mensen uit verschillende tijden mee zitten.
+        Praat met Julius Cesar de leuw en leer zijn gebruiken of help Pumba Stier de domme verzamelaar zijn speer terug te krijgen. Ricky's avonturen zitten vol stijl, kleur,
+        Plezier en leuke stemmetjes. Hier onder volgt nog wat uitleg over verschillende spel aspecten met wat vroege beelden van het spel in ontwikkeling.
     </p>
+
     <div class="imageContainer">
-        <!--        <img src="img/BrilVoorbeeld1.png">-->
-        <!--        <img src="img/2.png">-->
-        <!--        <img src="img/codes.png">-->
+        <div class="character">
+            <p class="characterName">Ontdekken</p>
+            <p class="characterName"><img class="worlImage" src="img/ontdekken.png"></p>
+            <p>In deze wereld speel je Als Ricky zie (zie links). Je kunt op dingen in de achtergron klikke ne ook op personages in beeld om informatie te krijgen.
+            Hoe meer je ontdekt en onderzoekt hoe meer je leert over de tijd waar je dan bent.</p>
+        </div>
+        <div class="character">
+            <p class="characterName">Praten</p>
+            <p class="characterName"><img class="worlImage" src="img/praten.png"></p>
+            <p>Hij is een slimme boer die goed is in het verbouwen van graan. Hij heeft een hekel aan mensen
+                die dom zijn of zijn spullen stelen. En als iemand dat allebei doet dat wil je niet weten.</p>
+        </div>
+
+        <div class="character">
+            <p class="characterName">Menu</p>
+            <p class="characterName"><img class="worlImage" src="img/menu.png"></p>
+            <p>Het simpele menu is ook geleik de tijdmachine de rode  knoppen(die zijn nu kwijt daar om rood) zin gelinkt
+            aan de verschillende tijdperken. Druk op één er van om naar een andere tijd te rijzen. In de vakjes
+            aan de linkerkant kunnen spullen gestopt worden die krijgt of vind. de rode knop sluit het spel en de groen
+            knop maakt een foto.</p>
+        </div>
+        <div class="character">
+            <p class="characterName">Wereld</p>
+            <p class="characterName"><img class="worlImage" src="img/wereld.png"></p>
+            <p>De wereld van Ricky bestaat uit verschillende prachtige landschappen. En wordt bewoond door veel dieren
+            bekend en onbekend. Je hebdt er nu al een paar gezien maar er is nog veel meer te ontdekken. Ontdek de wereld
+            en wordt net zo enthusiast van geschiedenis als Ricky.</p>
+        </div>
     </div>
 </section>
 <section>
     <h2 id="characters">Personages</h2>
     <p>
-        Dit spel heef veel kleur rijke personages. Ik zal er een paar aan je voorstellen.
+        Dit spel heef veel kleur rijke personages die je leert kennen tijdens het spel. Iedereen heeft zijn eigen bijzonderheden en ik zal hier een paar aan je voorstellen.
     </p>
     <div class="imageContainer">
         <div class="character">
