Fixing a few text errors. Making some text a bit more child-friendly. This is patch 1 a second wone will follow later making even more text child friendly.

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 
     <div class="imageContainer">
         <div class="character">
-            <p class="characterName">Ontdekken</p>
+            <p class="characterName">Klikken en zoeken</p>
             <p class="characterName"><img class="worlImage" src="img/ontdekken.png"></p>
-            <p>In deze wereld speel je Als Ricky zie (zie links). Je kunt op dingen in de achtergron klikke ne ook op personages in beeld om informatie te krijgen.
-            Hoe meer je ontdekt en onderzoekt hoe meer je leert over de tijd waar je dan bent.</p>
+            <p>In deze wereld speel je Als Ricky (zie links). Ricky is heel nieuwsgierig en weel alles onder zoeken ook op iedereen die hij tegen komt door met mensen te praten en
+                op dingen te klikken leren jij en ricky ook steeds meer. Verken samen met Ricky de wereld van vroeger.</p>
         </div>
         <div class="character">
-            <p class="characterName">Praten</p>
+            <p class="characterName">Praten en leren</p>
             <p class="characterName"><img class="worlImage" src="img/praten.png"></p>
-            <p>Hij is een slimme boer die goed is in het verbouwen van graan. Hij heeft een hekel aan mensen
-                die dom zijn of zijn spullen stelen. En als iemand dat allebei doet dat wil je niet weten.</p>
+            <p>Met anderen praten zal je helpen meer te leren van de geschiedenis. Leer waar hunnebedden van daan komen.
+            Vraag naar hoe potten vroeger werden gemaakt. Dit en nog meer leer je in je avontuur met Ricky.</p>
         </div>
 
         <div class="character">
