Fix 2.1.1 Fixing more  language errors and adding/changing text to be more child friendly

--- a/index.html
+++ b/index.html
@@ -27,81 +27,79 @@
     <h2 id="game">Game</h2>
     <p>Ricky's Adventure for the Ages(Naam nog niet definitief). Dit is een point en click avontuur.
         Je klikt op dingen in de achtergrond. Door dit te doen leer je meer over het tijdperk waar je dan bent.
-        Verzamel verschillende objecten en geef ze aan de juiste karakters om naar het volgende gebied te gaan en om de karakters
+        Verzamel verschillende spullen en geef ze aan de juiste personen om naar het volgende gebied te gaan en om de personen
         te helpen met hun problemen. Op deze manier leer je belangrijke gebeurtenissen uit de geschiedenis en zie je waar de mensen uit verschillende tijden mee zitten.
-        Praat met Julius Cesar de leuw en leer zijn gebruiken of help Pumba Stier de domme verzamelaar zijn speer terug te krijgen. Ricky's avonturen zitten vol stijl, kleur,
-        Plezier en leuke stemmetjes. Hier onder volgt nog wat uitleg over verschillende spel aspecten met wat vroege beelden van het spel in ontwikkeling.
+        Praat met Julius Ceasar de leeuw en leer zijn gebruiken of help Pumba de domme verzamelaar om zijn speer terug te krijgen. Ricky's avonturen zitten vol stijl, kleur,
+        plezier en leuke stemmetjes.
     </p>
 
     <div class="imageContainer">
         <div class="character">
             <p class="characterName">Klikken en zoeken</p>
             <p class="characterName"><img class="worlImage" src="img/ontdekken.png"></p>
-            <p>In deze wereld speel je Als Ricky (zie links). Ricky is heel nieuwsgierig en weel alles onder zoeken ook op iedereen die hij tegen komt door met mensen te praten en
-                op dingen te klikken leren jij en ricky ook steeds meer. Verken samen met Ricky de wereld van vroeger.</p>
+            <p>In dit spel speel je als Ricky (zie links). Ricky is heel nieuwsgierig en wil alles en iedereen onderzoeken. Door
+                op dingen te klikken leren jij en Ricky ook steeds meer. Gebruik de tijdmachine en reis samen met Ricky door verschillende tijdperken.</p>
         </div>
         <div class="character">
             <p class="characterName">Praten en leren</p>
             <p class="characterName"><img class="worlImage" src="img/praten.png"></p>
-            <p>Met anderen praten zal je helpen meer te leren van de geschiedenis. Leer waar hunnebedden van daan komen.
-            Vraag naar hoe potten vroeger werden gemaakt. Dit en nog meer leer je in je avontuur met Ricky.</p>
+            <p>Met anderen praten zal je helpen meer te leren van de geschiedenis. Leer waar hunebedden vandaan komen.
+            Vraag naar de manier waarop potten vroeger werden gemaakt. Dit en nog meer leer je in je avontuur met Ricky.</p>
         </div>
 
         <div class="character">
-            <p class="characterName">Menu</p>
+            <p class="characterName">Tijdmachine</p>
             <p class="characterName"><img class="worlImage" src="img/menu.png"></p>
-            <p>Het simpele menu is ook geleik de tijdmachine de rode  knoppen(die zijn nu kwijt daar om rood) zin gelinkt
-            aan de verschillende tijdperken. Druk op één er van om naar een andere tijd te rijzen. In de vakjes
-            aan de linkerkant kunnen spullen gestopt worden die krijgt of vind. de rode knop sluit het spel en de groen
-            knop maakt een foto.</p>
+            <p>Dit is de tijdmachine. Druk op een rode knop om naar een andere tijd te reizen. In de vakjes
+            aan de linkerkant kunnen spullen gestopt worden die je krijgt of vindt. De oranje knop bovenop de tijdmachine sluit het spel en met de groene
+            knop maak je een foto.</p>
         </div>
         <div class="character">
             <p class="characterName">Wereld</p>
             <p class="characterName"><img class="worlImage" src="img/wereld.png"></p>
-            <p>De wereld van Ricky bestaat uit verschillende prachtige landschappen. En wordt bewoond door veel dieren
-            bekend en onbekend. Je hebdt er nu al een paar gezien maar er is nog veel meer te ontdekken. Ontdek de wereld
-            en wordt net zo enthusiast van geschiedenis als Ricky.</p>
+            <p>De wereld van Ricky bestaat uit verschillende prachtige landschappen en wordt bewoond door veel dieren
+            bekend en onbekend. Je hebt er nu al een paar gezien, maar er is nog veel meer te ontdekken. Ontdek de wereld
+            en wordt net zo enthousiast van geschiedenis als Ricky.</p>
         </div>
     </div>
 </section>
 <section>
     <h2 id="characters">Personages</h2>
     <p>
-        Dit spel heef veel kleur rijke personages die je leert kennen tijdens het spel. Iedereen heeft zijn eigen bijzonderheden en ik zal hier een paar aan je voorstellen.
+        Dit spel heeft veel kleurrijke personages die je leert kennen tijdens het spel. Iedereen heeft zijn eigen bijzonderheden en ik zal er hier een paar aan je voorstellen.
     </p>
     <div class="imageContainer">
         <div class="character">
             <p class="characterName">Ricky</p>
             <p class="characterName"><img class="characterimage" src="img/Ricky.png"></p>
-            <p>Dit is Ricky De hoofdpersoon van ons verhaal. Hij houd van avontuur maar niet van geschiedenis.</p>
+            <p>Dit is Ricky, de hoofdpersoon van ons verhaal. Hij houdt van avontuur maar niet van geschiedenis.</p>
         </div>
         <div class="character">
             <p class="characterName">Mazary</p>
             <p class="characterName"><img class="characterimage" src="img/boer1.png"></p>
-            <p>Hij is een slimme boer die goed is in het verbouwen van graan. Hij heeft een hekel aan mensen
-            die dom zijn of zijn spullen stelen. En als iemand dat allebei doet dat wil je niet weten.</p>
+            <p>Hij is een slimme boer die goed is in het verbouwen van graan. Hij heeft een hekel aan levende wezens
+            die dom zijn of zijn spullen stelen. En als iemand dat allebei doet..... dat wil je niet weten.</p>
         </div>
 
         <div class="character">
             <p class="characterName">Malaka</p>
             <p class="characterName"><img class="characterimage" src="img/boer2.png"></p>
-            <p>Malaka is de beste vriendin van Mazary. Zij zorgt voor de v dieren die ze houden in het dorp. Mazri houd erg
-            van de groente die Mazary voor haar mee neemt.</p>
+            <p>Malaka is de beste vriendin van Mazary. Zij zorgt voor de dieren die ze houden in het dorp. Malaka houdt erg
+            van de groente die Mazary voor haar meeneemt.</p>
         </div>
         <div class="character">
             <p class="characterName">Pumba</p>
             <p class="characterName"><img class="characterimage" src="img/Jager1.png"></p>
-            <p>Hij is goed in jagen en houd enorm van lekker eten. Helaas is dat ook zo ongeveer het enigste waar hij
-            goed in is want hij is niet erg slim.</p>
+            <p>Hij is goed in jagen en houdt enorm van lekker eten. Helaas is dat ook zo ongeveer het enige waar hij
+            goed in is, want hij is niet erg slim.</p>
         </div>
     </div>
 </section>
 <section>
     <h2 id="over">Over </h2>
     <p>Wij zijn een groep studenten met de missie om geschiedenis zo leuk mogelijk te maken voor iedereen.
-        Dit doen we met behulp van computer spellen die je op een leuke manier leren hoe geschiedenis in elkaar zit
-        Met behulp van kleurrijke en grappiger personages maken we de wereld van geschiedenis toegankelijker dan ooit te
-        voren.</p>
+        Dit doen we met behulp van computerspellen die je op een leuke manier leren hoe geschiedenis in elkaar zit.
+        Met behulp van kleurrijke en grappige personages maken we de wereld van geschiedenis toegankelijker dan ooit tevoren.</p>
 </section>
 </body>
 </html>
